# python-mocking-workshop

./: .gitignore  Justfile  README.md  code.py  module.py  pyproject.toml
tests/: code_test.py  conftest.py
